syntax = "proto3"; // 协议版本

// 选项配置
option java_multiple_files = true;
//生成位置
option java_package = "com.github.axinger.api";
//option java_outer_classname = "SimpleProto";
import "google/protobuf/wrappers.proto";

import "google/protobuf/struct.proto";

service Simple {

  /**
    * 普通 RPC
   */
  rpc SendMessage (MyRequest) returns (MyResponse); // 普通 RPC

  /**
    * 服务端流式
   */
  rpc SendMessageStream (MyRequest) returns (stream MyResponse);

  /**
    *  新增双向流式方法
   */
  rpc ServerPushStream (stream MyRequest) returns (stream MyResponse) {}

  /**
    * StringValue参数
   */
  rpc Get1 (google.protobuf.StringValue) returns (google.protobuf.StringValue);

  /**
    * Struct参数
   */
  rpc Get2 (google.protobuf.StringValue) returns (MyStructDto);
}

message MyRequest {
  string name = 1;
  int32 value = 2;

  //oneof 是 Protocol Buffers (protobuf) 中的一个特殊语法结构，它用于表示一组字段中同一时间只能有一个字段被设置。
  // 这是 protobuf 提供的一种联合类型(union type)的实现方式
  oneof content {
    string message = 3;
    Heartbeat heartbeat = 4;
  }
}

message MyResponse {
  string message = 1;
  int64 result = 2;
  oneof content {
    string response = 3;
    Heartbeat heartbeat = 4;
  }
}

// 请求消息：包含一个 Struct 字段
message MyStructDto {
  google.protobuf.Struct details = 1;
}

message Heartbeat {
  int64 timestamp = 1;
}



